# swagger.json
@@ -5,10 +5,10 @@
     "description": "News Aggregator API containing relevant news from different news publishers and their articles.",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
+  "host": "news-v00i.onrender.com",
   "basePath": "/",
   "schemes": [
-    "http"
+    "https"
   ],
   "paths": {
     "/login": {
@@ -105,6 +105,9 @@
           "201": {
             "description": "Created"
           },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -195,6 +198,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -282,6 +288,9 @@
           "201": {
             "description": "Created"
           },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -362,6 +371,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
@@ -560,6 +572,174 @@
         ],
         "summary": "Remove an article by ID",
         "description": "Enter the article ID <p> **WARNING:** The record will be permanently removed from the database.<p>",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/journalists/": {
+      "get": {
+        "tags": [
+          "Journalists"
+        ],
+        "summary": "List all the Journalists",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Journalists"
+        ],
+        "summary": "Create a new Journalist",
+        "description": "Enter the Journalist information in the body template provided, JournalistID is created automatically.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "tags": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "publisher": {
+                  "example": "any"
+                },
+                "twitter": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/journalists/{id}": {
+      "get": {
+        "tags": [
+          "Journalists"
+        ],
+        "summary": "Get the Journalist by the ID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Journalists"
+        ],
+        "summary": "Update Journalist information by ID",
+        "description": "Enter the Journalist ID and any necessary changes in the body template provided.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "tags": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "publisher": {
+                  "example": "any"
+                },
+                "twitter": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Journalists"
+        ],
+        "summary": "Remove a Journalist by ID",
+        "description": "Enter the Journalist ID <p> **WARNING:** The Journalist will be permanently removed from the database.<p>",
         "parameters": [
           {
             "name": "id",
